# agentic-app-spec

./: .gitignore  INSTALL.md  README.md
blog/: building-a-go-api-with-agentic-app-spec.md  routing-agents-grocery-classification.md  tutorial-product-review-pipeline.md  v3-breaking-changes.md  what-is-agentic-app-spec.md
cli/: Cargo.toml  package-lock.json  package.json
cli/src/: index.ts  main.rs  utils.rs  utils.ts
cli/src/commands/: add-agent.ts  add-workflow.ts  add_agent.rs  add_workflow.rs  build.rs  build.ts  init.rs  init.ts  list.rs  list.ts  mod.rs  validate.rs
example/: agentic.config.yaml
example/agentic-spec/schemas/: food_classification.json
example/agentic-spec/workflows/: grocery-classify.yaml  product-review.yaml
example/agents/classify-vegetable/: agent.yaml
example/agents/comparison-researcher/: agent.yaml
example/routers/food-router/: prompt.md
runtime/go/: go.mod  llm.go  loader.go  logger.go  orchestrator.go  resolver.go  runner.go  types.go
runtime/python/: pyproject.toml
runtime/python/agentic_engine/: __init__.py  llm.py  loader.py  logger.py  orchestrator.py  resolver.py  runner.py  types.py
runtime/ruby/: agentic_engine.gemspec
runtime/ruby/lib/: agentic_engine.rb
runtime/typescript/: LICENSE  package-lock.json  package.json
runtime/typescript/src/: index.ts  llm.ts  loader.ts  logger.ts  orchestrator.ts  resolver.ts  runner.ts  types.ts
scripts/: build-release.sh  install.sh  publish.sh
spec/: agent.schema.json  router.schema.json  routing-agent.schema.json  workflow.schema.json
test-go-project/: agentic.config.yaml  go.mod  main.go
test-go-project/agentic-spec/schemas/: comparison_report.json  food_subtype_classification.json
test-go-project/schemas/: review_analysis.json
test-go-project/workflows/: grocery-classify.yaml  product-review.yaml  quick-review.yaml
test-python-project/: main.py  pyrightconfig.json  requirements.txt
(+31 files in other folders)
