[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-engine"
version = "0.1.0"
description = "Runtime engine for Agentic App Spec — powers generated stubs from `agentic build --lang python`."
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Dominick Caponi" },
]
keywords = ["agentic", "agents", "workflows", "orchestration", "ai", "llm"]
dependencies = [
    "anthropic>=0.39.0",
    "openai>=1.0.0",
    "pyyaml>=6.0",
]

[project.urls]
Repository = "https://github.com/dcaponi/agentic-app-spec"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["agentic_engine*"]
